--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,5 @@
 
+
 <div class="row">
 <div class="col-md-6 col-md-offset-3">
 
@@ -6,7 +7,7 @@
   <div style="float:right;">
 <%= link_to "New Task", new_task_path %>
 </div>
-  <table class="table table-bordered table-striped">
+<table class="table table-stripped">
     <tr>
       <th>Task No</th>
       <th>Name</th>
