resolved design conflicts

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,19 +1,50 @@
-<%= form_for @user, :url => profile_path(@user), :method => "PUT" do |f| %>
 
+<div class="row">
+<div class="col-md-6 col-md-offset-3">
+<%= form_for @user, :url => profile_path(@user), :method => "PUT" do |f| %>
+<div class="row">
+      <div class="col-xs-12 form-group">
 <%= f.label :name %>
 <%= f.text_field :name %>
+      </div></div>
+<div class="row">
+    <div class="col-xs-12 form-group">
+
 <%= f.label :MobileNumber %>
 <%= f.text_field :mobile_no %>
+    </div></div>
+
+<div class="row">
+      <div class="col-xs-12 form-group">
 <%= f.label :image %>
 <%= f.file_field :image %>
+      </div></div>
+
+<div class="row">
+      <div class="col-xs-12 form-group">
 <%= f.label :join_date %>
 <%= f.text_field :join_date, :class => "datepicker" %>
+      </div></div>
+
 <%= f.submit%>
 <%end%>
 
+</div></div>
+
+
+
+
+
 <script type="text/javascript">
   $(document).ready(function(){
-    $('.datepicker').datepicker();
+    $('.datepicker').datepicker({
+           	format: 'yyyy-mm-dd',
+
+          todayHighlight: true,
+          todayBtn: 'linked',
+          autoclose: true
+
+        } );
   });
 </script>
 
