--- a/app/views/status/index.html.erb
+++ b/app/views/status/index.html.erb
@@ -3,9 +3,9 @@
         
        
 
-<% if @user.tasks.present?%>
+<% if @task.present?%>
 <h1>Task Status</h1>
-<% @user.tasks.each do |t| %>
+<% @task.each do |t| %>
 <%=t.status%>
 <div>
 
