--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,31 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-datepicker";
+
+
+@import "status";
+
+
+ .row-fluid .span3 {
+    width: 17.077%;
+  }
+    
+  #sidebar-wrapper {
+      top: 52px;
+position: absolute;
+text-align: center;
+  margin-left: -275px;
+  left: 250px;
+  width: 160px;
+  background: #000;
+  position: fixed;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 1000;
+  transition: all 0.4s ease 0s;
+}
+
+#task_user_id{
+   width: 100%;
+height: 30px; 
+}
