--- a/app/assets/stylesheets/status.scss
+++ b/app/assets/stylesheets/status.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the status controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#task_status{
+     display: block;
+     width: 100%;
+    height: 30px;
+    }
+    
