--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <%= link_to "Users", users_path, :class=>"navbar-brand" %>
 <%= link_to "Tasks",tasks_path, :class => "navbar-brand" %></a>
       <div class="navbar-collapse collapse navbar-responsive-collapse">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav pull-right">
 
           <%if current_user%>
           <li><%=link_to "Signout", destroy_user_session_path,:method => :delete%></li>
@@ -67,20 +67,5 @@
 </html>
 
 
-<style>
-  .row-fluid .span3 {
-    width: 17.077%;
-  }
-    
-  #sidebar-wrapper {
-  margin-left: -275px;
-  left: 250px;
-  width: 160px;
-  background: #000;
-  position: fixed;
-  height: 100%;
-  overflow-y: auto;
-  z-index: 1000;
-  transition: all 0.4s ease 0s;
-}
-</style>
+
+ 
