--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -35,10 +35,10 @@
         <td><%= task.completion_date.strftime("%d-%m-%Y") if task.completion_date.present? %>
         
         </td>
-                <td>
-        <%= link_to "Edit", edit_task_path(task), class: "btn btn-primary" %>
-        <%= link_to "Show", task_path(task), class: "btn btn-primary" %>
-        <%= link_to "Destroy", task_path(task), :method => :delete, :data => {:confirm => "are you sure?"},class: "btn btn-danger" %>
+                             <td> <%= link_to "", edit_task_path(task), class: "btn btn-primary 
+glyphicon glyphicon-edit" %></td>
+                <td> <%= link_to "", task_path(task), class: "btn btn-primary glyphicon glyphicon-list" %></td>
+       <td> <%= link_to "", task_path(task), :method => :delete, :data => {:confirm => "are you sure?"},class: "btn btn-danger glyphicon glyphicon-trash" %>
         </td>
       </tr>
     <% end %>
